...
                        popUpTo(navController.graph.startDestinationId)
                        launchSingleTop = true
                    }
                }, modifier = Modifier
                    .fillMaxWidth(0.8f)
                    .height(50.dp)
                    .testTag("visitante")
            ) {
                Text(text = "Visitante", fontSize = 20.sp)
            }
            Spacer(modifier = Modifier.padding(4.dp))
            OutlinedButton(
                onClick = {
...
                        popUpTo(navController.graph.startDestinationId)
                        launchSingleTop = true
                    }
                }, modifier = Modifier
                    .fillMaxWidth(0.8f)
                    .height(50.dp)
                    .testTag("coleccionista")
            ) {
                Text(text = "Coleccionista", fontSize = 20.sp)
            }
            Text(
                modifier = Modifier
                    .fillMaxWidth(0.8f),
...
