...
    description: String?
) {
    Column(
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.spacedBy(8.dp),
        modifier = Modifier
            .testTag("detailComponent")
    ) {
        imageUrl?.let {

                CachedImage(
                    imageModel = it, modifier = Modifier
                        .size(150.dp)
...
