...
        verticalArrangement = Arrangement.Top,
        horizontalAlignment = Alignment.CenterHorizontally

    ) {
        IconButton(modifier = Modifier
            .align(alignment = Alignment.Start)
            .testTag("goBack"),
            onClick = { navController.popBackStack() }) {
            Icon(Icons.Filled.ArrowBack, contentDescription = "")
        }
        DetailComponent(
            imageUrl = performer?.image,
            name = performer?.name,
...
