...

            ComponentCard(
                tittle = album.name,
                date = dateFormatted,
                subtext = album.genre,
                imageUrl = album.cover,
                testTag = "itemCard",
                onClick = {
                    navController.navigate(NavigationScreen.AlbumDetailScreen.route + "/${album.id}")
                }
            )
        }
    }
...
