...
        items(collectors) { coleccionista ->

            ComponentCard(tittle = coleccionista.name,
                date = coleccionista.telephone,
                subtext = coleccionista.email,
                imageUrl = null,
                testTag = "collectorItemCard",
                onClick = { navController.navigate(NavigationScreen.CollectorDetailScreen.route + "/${coleccionista.id}") })
        }
    }
}


...
